test/expected/explain_+co_eq2_rck_b++default-cpp17.out
explain bool S::operator==(S const&) const = default
             ^
14: error: default operator "==" not supported until C++20
